# AndroidBasis

./: .gitignore  AndroidCamera相关.md  AndroidFramework.md  Android探索.md  Android考点.md  Android进阶.md  README.md  WebView相关.md  build.gradle  gradle.properties  settings.gradle  sonar-project.properties
.scannerwork/: report-task.txt
apm/: build.gradle
apm/src/androidTest/java/com/hugh/apm/: ExampleInstrumentedTest.java
apm/src/main/: AndroidManifest.xml
apm/src/test/java/com/hugh/apm/: ExampleUnitTest.java
app/: build.gradle  tinker-support.gradle
app/src/androidTest/java/com/hugh/basis/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/assets/: a.html
app/src/main/java/com/hugh/basis/: AnimationActivity.java  (+7 more)
app/src/main/res/anim/: animation_set.xml  translation.xml
app/src/main/res/drawable/: btn_gourp_go.xml  frame_animation.xml  oval_c8.xml  shape_bottom_teenager.xml  shape_teenager_btn.xml  shape_top_teenager.xml  shape_video_mask.xml  thumb.xml
app/src/main/res/layout/: activity_a.xml  activity_animate.xml  activity_animator.xml  activity_camera2face.xml  activity_constraintlayout.xml  activity_dialog.xml  activity_event1.xml  activity_event2.xml  activity_exoplayer.xml  activity_fold_main.xml  activity_fold_titlebar.xml  activity_footer.xml  activity_fragment.xml  activity_greendao.xml  activity_home.xml  activity_hook_page.xml  activity_kit.xml  activity_leak_test.xml  activity_list.xml  activity_looper_rv.xml  activity_main.xml  activity_mediaplay.xml  activity_play.xml  activity_puzzle.xml  activity_qr_code.xml  activity_receive.xml  activity_record.xml  activity_retrofit.xml  activity_scroll.xml  activity_scroll2.xml  activity_second.xml  activity_standard_scroll_page3.xml  activity_third.xml  activity_thread_test.xml  activity_timer.xml  activity_transparent.xml  activity_ui.xml  activity_vdhblog.xml  activity_vedioview.xml  activity_viewpager.xml  (+24 more)
app/src/main/res/values/: colors.xml  strings.xml  styles.xml
ffmpegtest/: build.gradle
ffmpegtest/src/main/: AndroidManifest.xml
ffmpegtest/src/main/cpp/: CMakeLists.txt  ffmpeg_lib.cpp
ffmpegtest/src/main/res/values/: strings.xml
gradle/wrapper/: gradle-wrapper.properties
module-ffmpeg/: build.gradle
module-ffmpeg/src/main/: AndroidManifest.xml
module-ffmpeg/src/main/cpp/: CMakeLists.txt  ffmpeg-lib.cpp  native-lib.cpp
module-ffmpeg/src/main/cpp/lib/pkgconfig/: libavcodec.pc  libavfilter.pc  libavformat.pc  libavutil.pc  libswresample.pc  libswscale.pc
module-ffmpeg/src/main/res/layout/: activity_ccmain.xml
(+127 files in other folders)
